<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/btnHowto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:contentDescription="@string/howto"
        android:onClick="onClickHowto"
        android:src="@drawable/howto" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/asteroids"
        android:src="@drawable/title" />

    <ImageView
        android:id="@+id/btnCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHowto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/credits"
        android:onClick="onClickCredits"
        android:src="@drawable/credits" />

    <ImageView
        android:id="@+id/btnGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnHowto"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:clickable="true"
        android:contentDescription="@string/play"
        android:onClick="onClickGame"
        android:src="@drawable/play" />

</RelativeLayout>